# ProgramEngineering

./: pyproject.toml  Зеленко.mdj
src/routes/: __init__.py  airplane.py  flight.py  ticket.py  user.py  user_details.py
src/routes/admin/: airplane.py  flight.py
src/schemas/: airplane.py  flight.py  seat.py  ticket.py  user.py  user_details.py
src/schemas/utils/: pagination.py
